# Python_ETL

./: .gitignore  LICENSE  Makefile  README.md  data.json  etl.py  graph.py  main.py  pyproject.toml  requirements.txt  util.py
data/: clinical_trials.csv  drugs.csv  pubmed.csv  pubmed.json
etl/: enums.py  etl.py  util.py
hooks/: pre-push
tests/: test_get_article_date_from_data.py  test_get_article_info_from_name.py  test_get_article_journal_from_data.py  test_get_drug_info_from_name.py  test_remove_file_extension.py
